# scrappy

./: .env.template  .gitignore  README.md  classes.py  discord_bot.py  main.py  nvidia_test.json  products.json  pyproject.toml  sites.py  test.py
sites/: ebuyer.py  nvidia.py  overclockers.py  scan.py
