[project]
name = "scrappy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audioop-lts>=0.2.1",
    "bs4>=0.0.2",
    "curl-cffi>=0.7.4",
    "discord>=2.3.2",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "rich>=13.9.4",
]
